test: add tests for LoginPresenter